@@ -1,4 +1,4 @@
 @set UPDATED 10 May 2005
 @set UPDATED-MONTH May 2005
-@set EDITION 2.01
-@set VERSION 2.01
+@set EDITION 2.02
+@set VERSION 2.02
