@@ -3390,32 +3390,9 @@ which is what you would probably use anyway :)</property>
 	      <property name="spacing">0</property>
 
 	      <child>
-		<widget class="GtkImage" id="image4">
-		  <property name="width_request">21</property>
-		  <property name="height_request">48</property>
-		  <property name="visible">True</property>
-		  <property name="pixbuf">gnee.png</property>
-		  <property name="xalign">0.5</property>
-		  <property name="yalign">0.5</property>
-		  <property name="xpad">0</property>
-		  <property name="ypad">0</property>
-		</widget>
-		<packing>
-		  <property name="padding">0</property>
-		  <property name="expand">True</property>
-		  <property name="fill">True</property>
-		</packing>
-	      </child>
-
-	      <child>
 		<widget class="GtkLabel" id="gnee_label">
-		  <property name="width_request">27</property>
-		  <property name="height_request">60</property>
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;b&gt;Gnee&lt;/b&gt; is the graphical frontend to Xnee
-
-Xnee is released under GPL version 2
-</property>
+		  <property name="label" translatable="yes"></property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
